--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h3. 2.1.4 December 29, 2014 (book version unreleased)
+
+* workaround for changes in 'google_drive' gem v1.0.0
+* updated Ruby from version 2.1.5 to 2.2.0
+
 h3. 2.1.3 December 25, 2014 (book version 2.1.3)
 
 * updated Rails from version 4.1.8 to Rails 4.2.0
