--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,6 +1,10 @@
 h1. CHANGELOG
 
-h3. 2.1.4 December 29, 2014 (book version unreleased)
+h3. 2.1.5 February 16, 2015 (book version unreleased)
+
+* use Ruby 1.9 hash syntax in the 'validates_format_of :email' statement (closes issue #46)
+
+h3. 2.1.4 December 29, 2014 (book version 2.1.4)
 
 * workaround for changes in 'google_drive' gem v1.0.0
 * updated Ruby from version 2.1.5 to 2.2.0
