updated Rails from version Rails 4.2.1 to 4.2.4

--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 2.2.1 September 2, 2015 (book version 2.2.0)
+
+* updated Rails from version Rails 4.2.1 to 4.2.4
+
 h3. 2.2.0 June 6, 2015 (book version 2.2.0)
 
 * book version matches the example application
