--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 2.2.2 October 30, 2015 (book version 2.2.2)
+
+* updated filename to '1st_load_framework.css.scss' from 'framework_and_overrides.css.scss' for change in the rails_layout gem
+
 h3. 2.2.1 September 2, 2015 (book version 2.2.1)
 
 * updated Rails from version Rails 4.2.1 to 4.2.4
