update for book v3.0.0

--- a/README.textile
+++ b/README.textile
@@ -18,9 +18,9 @@ h4. Latest Book Version: 2.2.2
 
 The most recent version of the book was written for Rails 4.2 and released October 30, 2015. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
 
-h4. Application Version: 2.2.2
+h4. Application Version: 3.0.0
 
-This example application (here on GitHub) matches the code in the book.
+This example application (here on GitHub) is ahead of the code in the book.
 
 For recent changes, see:
 
@@ -73,11 +73,11 @@ This is one in a series of Rails example apps and tutorials from the "RailsApps 
 
 h2. Accounts You Will Need
 
-To send email from the application, you will need a "Gmail":https://accounts.google.com/SignUp?service=mail account. You can get a free "Gmail":https://accounts.google.com/SignUp?service=mail account if you don't already have one. Other services, such as "Mandrill":http://mandrill.com/, can be used to send email from the application. Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
-
 The application includes a form that allows website visitors to "opt-in" to a mailing list. You'll need a "MailChimp":http://mailchimp.com/ account, which is free. MailChimp allows you to send up to 12,000 emails/month to a list of 2000 or fewer subscribers for free. There is no cost to set up an account. After you have set up a MailChimp account, create a new mailing list where you can collect email addresses of visitors who have asked to subscribe to a newsletter. The MailChimp "Lists" page has a button for "Create List." The list name and other details are up to you.
 
 With MailChimp, you can send a welcome message automatically when the visitor signs up for the mailing list. It’s a bit difficult to find the MailChimp option to create a welcome message. Strangely, MailChimp considers a welcome message a "form." Here's how to find it. On the MailChimp "Lists" page, click the "down arrow" for a menu and click "Signup forms." Then click "Link to a form." On the "Create Forms" page, there is a dropdown list of "Forms & Response Emails." The gray box shows "Signup form." Click the down arrow. Select the menu item named "Final 'Welcome' Email" and you'll be able to create a welcome message.
+
+To send email from the application, you will need a "Mandrill":http://mandrill.com/ account. Sign up for a MailChimp account to get started. After you've created your MailChimp account, see the instructions [How do I use Mandrill if I already have a MailChimp account?](http://help.mandrill.com/entries/21681117-how-do-i-use-mandrill-if-i-already-have-a-mailchimp-account). Or you can connect directly to an SMTP mail server to send email. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html for more information.
 
 We provide instructions to deploy the tutorial application to "Heroku":https://www.heroku.com/ which provides Rails application hosting. It costs nothing to set up a Heroku account and deploy as many applications as you want. To deploy an app to Heroku, you must have a Heroku account. Visit Heroku "to set up an account":https://id.heroku.com/signup/devcenter.
 
@@ -85,7 +85,7 @@ h2. Dependencies
 
 Before generating your application, you will need:
 
-* The Ruby language - version 2.2
+* The Ruby language - version 2.3
 * The Rails gem - version 4.2
 
 See the article "Installing Rails":http://railsapps.github.io/installing-rails.html for instructions about setting up Rails and your development environment.
@@ -181,7 +181,6 @@ h3. Gems
 
 Here are the gems used by the application:
 
-* "activerecord-tableless":https://github.com/softace/activerecord-tableless - helps to use Rails without a database
 * "foundation-rails":https://github.com/zurb/foundation - front-end framework
 * "gibbon":https://github.com/amro/gibbon - access to the MailChimp API
 * "high_voltage":https://github.com/thoughtbot/high_voltage - for static pages like "about"
@@ -222,8 +221,8 @@ Add your credentials to the file *config/secrets.yml*:
 # if you're sharing your code publicly.
 
 development:
-  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
-  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
+  mandrill_username: <%= ENV["MANDRILL_USERNAME"] %>
+  mandrill_api_key: <%= ENV["MANDRILL_API_KEY"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: example.com
@@ -236,8 +235,8 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
-  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
+  mandrill_username: <%= ENV["MANDRILL_USERNAME"] %>
+  mandrill_api_key: <%= ENV["MANDRILL_API_KEY"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
@@ -245,9 +244,7 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 </pre>
 
-All configuration values in the *config/secrets.yml* file are available anywhere in the application as variables. For example, @Rails.application.secrets.email_provider_username@ will return the string set in the Unix environment variable @GMAIL_USERNAME@.
-
-For the Gmail username and password, enter the credentials you use to log in to Gmail when you check your inbox. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html if you are using Google two factor authentication.
+All configuration values in the *config/secrets.yml* file are available anywhere in the application as variables. For example, @Rails.application.secrets.mandrill_username@ will return the string set in the Unix environment variable @MANDRILL_USERNAME@.
 
 To add an environment variable for the MailChimp API key, "Log in to MailChimp":https://admin.mailchimp.com/ to get your API key. Click your name at the top of the navigation menu, then click "Account Settings." Click "Extras," then "API keys."
 
@@ -292,8 +289,8 @@ You can deploy from the command line.
 If you've set configuration values in the *config/secrets.yml* file, you'll need to set them as Heroku environment variables. You can set Heroku environment variables directly with @heroku config:add@. For example:
 
 <pre>
-$ heroku config:add GMAIL_USERNAME='myname@gmail.com' GMAIL_PASSWORD='secret'
-$ heroku config:add MAILCHIMP_API_KEY='mykey' MAILCHIMP_LIST_ID='mylistid'
+$ heroku config:add MANDRILL_USERNAME='MyUsername' MANDRILL_API_KEY='my-key'
+$ heroku config:add MAILCHIMP_API_KEY='my-key' MAILCHIMP_LIST_ID='mylistid'
 $ heroku config:add OWNER_EMAIL='me@example.com' DOMAIN_NAME='myapp.herokuapp.com'
 </pre>
 
