--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.1 January 29, 2016 (Book Two version 3.0.1)
+
+* don't use Foundation 6, use foundation-rails 5.5 gem, fixes #79
+
 h3. 3.0.0 January 14, 2016 (book version 3.0.0)
 
 * switch to using the Mandrill service to send email
