--- a/README.textile
+++ b/README.textile
@@ -14,13 +14,17 @@ This example application is fully documented in the book "Learn Ruby on Rails":h
 
 With the book, a complete beginner can create this application without any additional knowledge. The book explains all the code, introducing basic concepts of Rails application development and professional practices.
 
-h4. Latest Book Version: 3.0.0
+h4. Latest Version, Book One: 3.0.0
 
-The most recent version of the book was written for Rails 4.2 and released January 14, 2016. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
+Book One does not contain code from the application and does not change often. The most recent version of the book was written for Rails 4.2 and released January 14, 2016.
 
-h4. Application Version: 3.0.0
+h4. Latest Version, Book Two: 3.0.1
 
-This example application (here on GitHub) matches the code in the book.
+Book Two contains a tutorial application and changes more frequently. The most recent version of the book was written for Rails 4.2 and released January 29, 2016. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
+
+h4. Application Version: 3.0.1
+
+This example application (here on GitHub) matches the code in Book Two.
 
 For recent changes, see:
 
