--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.2.0 October 11, 2016 (Book Two version 3.1.0)
+
+* update to Ruby 2.3.1 and Rails 5.0
+
 h3. 3.1.0 February 29, 2016 (Book Two version 3.1.0)
 
 * switch to using the SendGrid service to send email
