--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.2.1 October 28, 2016 (Book Two version 3.1.0)
+
+* update Segment.com analytics script and rename file to segment.js
+
 h3. 3.2.0 October 11, 2016 (Book Two version 3.1.0)
 
 * update to Ruby 2.3.1 and Rails 5.0
