--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. !http://railsapps.github.io/images/rails-36x36.jpg(Learn Rails)! Learn Rails
 
-A Rails 5.0 example application to accompany the book "Learn Ruby on Rails":http://learn-rails.com/learn-ruby-on-rails.html.
+A Rails 5.1 example application to accompany the book "Learn Ruby on Rails":http://learn-rails.com/learn-ruby-on-rails.html.
 
 The book introduces basic concepts of Rails development by showing the reader how to build an application that can be used for a typical small business website.
 
@@ -22,9 +22,9 @@ h4. Latest Version, Book Two: 4.0.0
 
 Book Two contains a tutorial application and changes more frequently. The most recent version of the book was written for Rails 5.0 and released October 31, 2016. Please make sure you have the newest version of the book (or the code examples may not work). The book version is shown on the title page. "Get the book":http://learn-rails.com/learn-ruby-on-rails.html if you need the new version.
 
-h4. Application Version: 4.0.0
+h4. Application Version: 4.1.0
 
-This example application (here on GitHub) is the same as the code in Book Two.
+This example application (here on GitHub) is newer than the code in Book Two.
 
 For recent changes, see:
 
@@ -89,8 +89,8 @@ h2. Dependencies
 
 Before generating your application, you will need:
 
-* The Ruby language - version 2.3.1
-* The Rails gem - version 5.0
+* The Ruby language - version 2.4.1
+* The Rails gem - version 5.1
 
 See the article "Installing Rails":http://railsapps.github.io/installing-rails.html for instructions about setting up Rails and your development environment.
 
@@ -118,7 +118,7 @@ h4. Generate
 
 If you want to use the project as a starter application, use the "Rails Composer":http://railsapps.github.io/rails-composer/ tool to generate a new version of the example app. You'll be able to give it your own project name when you generate the app. Generating the application gives you additional options.
 
-To build the example application, Rails 5.0 must be installed in your development environment. Run the command:
+To build the example application, Rails 5.1 must be installed in your development environment. Run the command:
 
 <pre>
 $ rails new learn-rails -m https://raw.github.com/RailsApps/rails-composer/master/composer.rb
